# Agentic-ScikitLearn

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: code-quality.yml
agentic_scikitlearn/: trainer_agent.py
agentic_scikitlearn/workflows/: agent_workflows.py
examples/: example1.py
examples/data/: Salary_dataset.csv
